Need to walk ancestors when text descendants of LayoutSVGText changes

In LayoutSVGText::InvalidatePositioningValues - which is called when a
number of different modifications to text is performed - we only flagged
the node itself for layout/paint invalidation. We also need to walk the
ancestor chain in case the text is a descendant of a resource.
(A <clipPath> in this specific case.)

Bug: 901851
Change-Id: Ia70860107616496e979c43a1d1a681def8b8c206
Reviewed-on: https://chromium-review.googlesource.com/c/1320069
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Commit-Queue: Fredrik Söderquist <fs@opera.com>
Cr-Commit-Position: refs/heads/master@{#605789}
Former-commit-id: ac4f5a68966e43cd7778f9864de52d1446a82c37